syntax = "proto3";

package api;

option go_package = ".;pb";

service VoteRequester {
  rpc Request (VoteRequest) returns (VoteResponse) {}
}

message VoteRequest {
  int64 term = 1;
  int64 leader = 2;
  int64 lastLogIndex = 3;
  int64 lastLogTerm = 4;
}

message VoteResponse {
  int64 term = 1;
  bool granted = 2;
}